# personal-website

./: Makefile  README.md  pyproject.toml  requirements.txt
root/: settings.py  urls.py
static/assets/css/: styles.css
templates/website/: about.html  blog-single.html  home.html  index.html
user/migrations/: 0001_initial.py
user/models/: user.py
website/: admin.py  forms.py  urls.py  views.py
website/migrations/: 0001_initial.py
website/models/: __init__.py  me.py  portfolio.py
