[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["Khasanjon <khasanjon.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_website"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
